SignareCountSlider: fix size on Firefox

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -8,6 +8,7 @@
 .textInput {
     margin-left: 1rem;
     font-size: @fontSizeL;
+    width: 5rem;
 }
 
 // DA SLIDER 👇
